--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "build": "rimraf ./dist && tsc",
     "lint": "eslint . --max-warnings=0",
     "prepublishOnly": "npm run lint && npm run build",
-    "watch": "npm run build && npm link && nodemon"
+    "watch": "npm run build && npm link && nodemon",
+    "test": "echo \"No tests specified\""
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
