--- a/package.json
+++ b/package.json
@@ -2,18 +2,18 @@
   "name": "homebridge-ledstrip-controller-restapi",
   "displayName": "homebridge-ledstrip-controller-restapi",
   "type": "module",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "private": true,
-  "description": "A short description about what your plugin does.",
-  "author": "Your Name",
+  "description": "A Plugin to control LED strip from rest API as backend is using fastAPI and Bleak to communicate with the bluetooth device.",
+  "author": "Harshal Panpaliya",
   "license": "Apache-2.0",
-  "homepage": "https://github.com/USERNAME/GITHUB_PROJECT_NAME#readme",
+  "homepage": "https://github.com/hppanpaliya/homebridge-ledstrip-controller-restapi#readme",
   "repository": {
     "type": "git",
-    "url": "https://github.com/USERNAME/GITHUB_PROJECT_NAME.git"
+    "url": "https://github.com/hppanpaliya/homebridge-ledstrip-controller-restapi.git"
   },
   "bugs": {
-    "url": "https://github.com/USERNAME/GITHUB_PROJECT_NAME/issues"
+    "url": "https://github.com/hppanpaliya/homebridge-ledstrip-controller-restapi/issues"
   },
   "keywords": [
     "homebridge-plugin"
